fix(alerts): alerts color contrast (#2734)
* fix(alerts): alerts color contrast

* fix(alerts): CR fixes

--- a/src/components/notification/Notification.scss
+++ b/src/components/notification/Notification.scss
@@ -21,24 +21,28 @@
     margin: 10px auto;
     padding: 10px 10px 10px 20px;
     overflow: hidden;
-    color: $white;
+    color: $bdl-gray;
     font-weight: bold;
-    background-color: $bdl-gray-80;
-    border-radius: 4px;
+    background-color: $bdl-gray-10;
+    border: 2px solid $bdl-gray;
+    border-radius: $bdl-border-radius-size * 2;
     box-shadow: 0 2px 6px fade-out($black, .85);
     opacity: .9;
     transition: opacity .1s ease-out;
 
     &.info {
-        background-color: $bdl-green-light;
+        background-color: $bdl-green-light-20;
+        border-color: $bdl-green-light;
     }
 
     &.warn {
-        background-color: $bdl-yellorange;
+        background-color: $bdl-yellorange-20;
+        border-color: $bdl-yellorange;
     }
 
     &.error {
-        background-color: $bdl-watermelon-red;
+        background-color: $bdl-watermelon-red-20;
+        border-color: $bdl-watermelon-red;
     }
 
     &.is-hidden {
@@ -71,14 +75,14 @@
     button,
     a {
         flex: none;
-        color: $white;
+        color: $bdl-gray;
 
         &.btn.is-disabled,
         &.btn:not(.is-disabled) {
             margin: 0 5px;
             padding: 7px 13px;
             background-color: transparent;
-            border-color: $bdl-gray-10;
+            border-color: $bdl-gray;
         }
 
         &.close-btn {
